[project]
name = "wardrobe_manager"
version = "1.0.0"
description = "A Python service to store, extract and analyse information about your clothes and their wear history."
authors = [
    {name = "Maria Kramkova",email = "m.kramkova@gmail.com"}
]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "python-unittest (==0.2.16)",
    "pre-commit (==4.5.1)",
    "ruff (>=0.14.10,<0.15.0)",
    "isort (>=7.0.0,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
