[project]
name = "wardrobe_manager"
version = "1.0.0"
description = "A Python service to store, extract and analyse information about your clothes and their wear history."
authors = [
    {name = "Maria Kramkova",email = "m.kramkova@gmail.com"}
]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "python-unittest (==0.2.16)",
    "pre-commit (==4.5.1)",
    "ruff (==0.14.10)",
    "isort (==7.0.*)"
]


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = ["tests/"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = [
    "E", "F", "I", "W", "C", "N",
    "Q", "RSE", "RET", "SIM", "TID", "ARG", "PL", "RUF"
]
ignore = [
    "D100", "D104", "G004", "PLR0913", "Q000",
    "RUF001", "RUF002", "RUF003"
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
